added a welcome page for the index and made the original index the home page for the user

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,9 +13,9 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
           crossorigin="anonymous">
 
-    <link href="/static/favicon.ico" rel="icon">
+    <link href="../static/favicon.ico" rel="icon">
 
-    <link href="/static/styles.css" rel="stylesheet">
+    <link href="../static/styles.css" rel="stylesheet">
 
     <!-- http://getbootstrap.com/docs/4.5/ -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -33,7 +33,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
 
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="/home">
         <span class="blue">The</span>
         <span class="red">Resin</span>
         <span class="yellow">Crafter's</span>
